// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List Row > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root HvTable-listRow css-1w2ag30-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head HvTableRow-variantListHead hv-17t2c43 css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvFocus-root grid HvTableRow-root HvTableRow-body HvTableRow-variantList hv-1cfmkid css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList hv-xzm21r css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Simple Table > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root css-1yyu3d-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head hv-5vys7b css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body hv-e66i1g css-oeywy6-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body hv-111e940 css-1jvhp0u-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
